--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,15 @@
 .main_container{
-    border: 1px solid rgb(20, 20, 18);
+    /* border: 1px solid rgb(20, 20, 18); */
     padding: 5px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     row-gap: 10px;
     column-gap: 10px;
+    margin-bottom: 20px;
 }
 
 .container{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     padding: 5px;
 }
 
@@ -63,10 +64,14 @@
     height: auto;
 }
 
+a {
+    text-decoration: none;
+}
+
 .navbar {
     background-color: black;
     width: 100%;
-    height: 50px;
+    height: 56px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -74,10 +79,13 @@
 
 .navbar_content {
     color: white;
-    
+    padding: 15px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 22px;
-    padding: 10px;
+}
+
+.navbar_content:hover{
+    background-color: rgb(183, 179, 179);
 }
 
 /* Media Query for Responsive Design */
